--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
             <div class="item">
                 <img src="images/fimi_1.jpeg" alt="">
                 <div class="carousel-caption">
-                Trust leads to approachability
+                    Trust leads to approachability
                 </div>
             </div>
             <div class="item">
                 <img src="images/EMC_4.jpeg" alt="">
                 <div class="carousel-caption">
-                Music is Medicine
+                    Music is Medicine
                 </div>
             </div>
             <div class="item">
@@ -165,7 +165,14 @@
                             <h2 id="velotext">VeloHouse</h2>
                             <div class="card-sm-body velo">
                                 <img src="images/image8.jpg" alt="velo-house-images" class="image-size img-responsive">
-                                <div class="overlay">Vintage Bicycle Passion.<a href="https://vimeo.com/105867814"><abbr title="Click Here!"><i class="fas fa-bicycle"></abbr></i></a></div>
+                                <div class="overlay">Vintage Bicycle Passion.
+                                    <a href="https://vimeo.com/105867814">
+                                        <abbr title="Click Here!">
+                                            <i class="fas fa-bicycle">
+                                        </abbr>
+                                        </i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
